Version 2.3.4
28-05-2014

[Updated] - Fix arguments comments.

[Feature] - Added to find packages from enabled repositories.
          - Added script to remove data. (clean.py)


Version 2.3.3
23-05-2015

[Updated] - Fix 'ZeroDivisionError:' for binary package install.
          - Fix 'OSError:' if path not exist.

Version 2.3.2
21-05-2015

[Updated] - Update arguments and options.
          - Remove view package version when upgrade because conflict with
            some packages with the same name.
          - Update file license.

Version 2.3.1
14-05-2015

[Feature] - Added the ability to sync with slackpkg and slpkg to update the 
            file ChangeLog.txt when upgrading distribution.

Version 2.3.0
07-05-2015

[Updated] - Bugfix: Find package error #13
            Thanks 'lucashpandolfo' for reporting.

Version 2.2.9
24-4-2015

[Updated] - Fix reference installed packages after distribution upgrade.
          - Fix double reference after already installed SBo packages.
          - Fix clear master SBo packages.

Version 2.2.8
23-4-2015

[Updated] - Fix added new packages when upgrad.
          - Fix man page.
          - Fix TypeError: 'NoneType' object has no attribute '__getitem__'
            when no sbo link found. Many Thanks to 'R S Ananda Murthy' to report.
          - Fix slackbuilds.org ChangeLog.txt url.
          - Update install.sh script.
          - Update binary/install.py, sbo/slackbuild.py and slack/patches.py 
            clases.
          - Update count packages the upgrading of distribution.

Version 2.2.7
18-3-2015

[Feature] - Added bash completion file.
          - Added fish completion file.
[Updated] - Fix synchronization issues when upgrading SBo repository.
          - Fix remove to the right spaces on view.

Version 2.2.6
26-2-2015

[Feature] - Added counter download.
[Updated] - Update Slackware release message.

Version 2.2.5
24-2-2015

[Updated] - Fix Error-prone.