@@ -2,6 +2,8 @@ Version 2.3.4
 28-05-2014
 
 [Updated] - Fix arguments comments.
+          - Update compression slackbuild package.
+          - Fix binary dependecies and sizes.
 
 [Feature] - Added to find packages from enabled repositories.
           - Added script to remove data. (clean.py)
